{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 110,
  "lineage": "6e837c66-891d-23b5-e0c1-f65fe1e3c0d4",
  "resources": [
    {
      "module": "module.kafka_elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a21fea349ffa723",
            "domain": "vpc",
            "id": "eipalloc-06a21fea349ffa723",
            "network_border_group": "ap-south-2",
            "public_dns": "ec2-18-60-245-8.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.60.245.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.kafka_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:internet-gateway/igw-052ef5abe63441cec",
            "id": "igw-052ef5abe63441cec",
            "owner_id": "978092202413",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.kafka_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:subnet/subnet-0b164816f68b92852",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b164816f68b92852",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978092202413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet-1"
            },
            "tags_all": {
              "Name": "private subnet-1"
            },
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "dependencies": [
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:subnet/subnet-006a2fb2c4a3d7269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006a2fb2c4a3d7269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978092202413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet-2"
            },
            "tags_all": {
              "Name": "private subnet-2"
            },
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "dependencies": [
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:subnet/subnet-06a3a56b4e5273367",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2c",
            "availability_zone_id": "aps2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a3a56b4e5273367",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978092202413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet-3"
            },
            "tags_all": {
              "Name": "private subnet-3"
            },
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "dependencies": [
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:subnet/subnet-0a0e3550ea78e9224",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0e3550ea78e9224",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978092202413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet-4"
            },
            "tags_all": {
              "Name": "private subnet-4"
            },
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "dependencies": [
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:subnet/subnet-0231a3032d787477a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0231a3032d787477a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978092202413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet-5"
            },
            "tags_all": {
              "Name": "private subnet-5"
            },
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "dependencies": [
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:subnet/subnet-032ad73c90a8632e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2c",
            "availability_zone_id": "aps2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032ad73c90a8632e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978092202413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet-6"
            },
            "tags_all": {
              "Name": "private subnet-6"
            },
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "dependencies": [
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.kafka_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:subnet/subnet-0f56fa974f86e5385",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f56fa974f86e5385",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "978092202413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.kafka_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:vpc/vpc-058efee5b65516d88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/19",
            "default_network_acl_id": "acl-0cff3403e2f48a22a",
            "default_route_table_id": "rtb-02936bc3ab1da41e4",
            "default_security_group_id": "sg-06cf187eab7e15604",
            "dhcp_options_id": "dopt-0029a49ca839160bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058efee5b65516d88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02936bc3ab1da41e4",
            "owner_id": "978092202413",
            "tags": {
              "Name": "vpc_01"
            },
            "tags_all": {
              "Name": "vpc_01"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a21fea349ffa723",
            "connectivity_type": "public",
            "id": "nat-02c80b0a26b724f71",
            "network_interface_id": "eni-00111aef6a5b318cb",
            "private_ip": "10.0.0.241",
            "public_ip": "18.60.245.8",
            "subnet_id": "subnet-0f56fa974f86e5385",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "module.kafka_elastic_ip.aws_eip.elastic_ip",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:network-acl/acl-096930ef94301775c",
            "egress": [],
            "id": "acl-096930ef94301775c",
            "ingress": [],
            "owner_id": "978092202413",
            "subnet_ids": [],
            "tags": {
              "Name": "network_acl"
            },
            "tags_all": {
              "Name": "network_acl"
            },
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "network_acl_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-015f2a1eb9eafde1c",
            "network_acl_id": "acl-096930ef94301775c",
            "subnet_id": "subnet-0b164816f68b92852"
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0da4e6bee7044792f",
            "network_acl_id": "acl-096930ef94301775c",
            "subnet_id": "subnet-006a2fb2c4a3d7269"
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-089f042505e3d7c77",
            "network_acl_id": "acl-096930ef94301775c",
            "subnet_id": "subnet-06a3a56b4e5273367"
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-016700f14b1b0e43e",
            "network_acl_id": "acl-096930ef94301775c",
            "subnet_id": "subnet-0a0e3550ea78e9224"
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-091fc750f915c4a2f",
            "network_acl_id": "acl-096930ef94301775c",
            "subnet_id": "subnet-0231a3032d787477a"
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01b87eddf739affca",
            "network_acl_id": "acl-096930ef94301775c",
            "subnet_id": "subnet-032ad73c90a8632e0"
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "bastion_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2881671072",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "bastion_ssh_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/24",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4169754382",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "kafka_network_acl_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.4.0/24",
            "egress": false,
            "from_port": 2181,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2993569979",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 2181
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.5.0/24",
            "egress": false,
            "from_port": 2182,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3457115488",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 600,
            "to_port": 2182
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.6.0/24",
            "egress": false,
            "from_port": 2183,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1392542742",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 700,
            "to_port": 2183
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "kafka_network_acl_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.4.0/24",
            "egress": true,
            "from_port": 2181,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-942673304",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 2181
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.5.0/24",
            "egress": true,
            "from_port": 2182,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2247778646",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 600,
            "to_port": 2182
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.6.0/24",
            "egress": true,
            "from_port": 2183,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1483520211",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 700,
            "to_port": 2183
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "zkeeper_network_acl_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.1.0/24",
            "egress": false,
            "from_port": 9092,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3617843835",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 9092
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.2.0/24",
            "egress": false,
            "from_port": 9093,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1252789005",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 9093
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.3.0/24",
            "egress": false,
            "from_port": 9094,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-794927565",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 400,
            "to_port": 9094
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "zkeeper_network_acl_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.1.0/24",
            "egress": true,
            "from_port": 9092,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1162021824",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 9092
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.2.0/24",
            "egress": true,
            "from_port": 9093,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2564149829",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 9093
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.3.0/24",
            "egress": true,
            "from_port": 9094,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3852915741",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-096930ef94301775c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 400,
            "to_port": 9094
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.network_acl.aws_network_acl.network_acl"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:route-table/rtb-030ef7313b21d71ac",
            "id": "rtb-030ef7313b21d71ac",
            "owner_id": "978092202413",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02c80b0a26b724f71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_elastic_ip.aws_eip.elastic_ip",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.nat_gateway.aws_nat_gateway.nat_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:route-table/rtb-04e71078f40c94426",
            "id": "rtb-04e71078f40c94426",
            "owner_id": "978092202413",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052ef5abe63441cec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_internet_gateway.aws_internet_gateway.internet_gateway",
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096f091e6397e711c",
            "route_table_id": "rtb-030ef7313b21d71ac",
            "subnet_id": "subnet-0b164816f68b92852"
          },
          "dependencies": [
            "module.kafka_elastic_ip.aws_eip.elastic_ip",
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.route_table.aws_route_table.private_route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edb9b1e7d3e07e81",
            "route_table_id": "rtb-030ef7313b21d71ac",
            "subnet_id": "subnet-006a2fb2c4a3d7269"
          },
          "dependencies": [
            "module.kafka_elastic_ip.aws_eip.elastic_ip",
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.route_table.aws_route_table.private_route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c20162eb48639ec",
            "route_table_id": "rtb-030ef7313b21d71ac",
            "subnet_id": "subnet-06a3a56b4e5273367"
          },
          "dependencies": [
            "module.kafka_elastic_ip.aws_eip.elastic_ip",
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.route_table.aws_route_table.private_route_table"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9a9a7286a99fb7b",
            "route_table_id": "rtb-030ef7313b21d71ac",
            "subnet_id": "subnet-0a0e3550ea78e9224"
          },
          "dependencies": [
            "module.kafka_elastic_ip.aws_eip.elastic_ip",
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.route_table.aws_route_table.private_route_table"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0748516efd92f1453",
            "route_table_id": "rtb-030ef7313b21d71ac",
            "subnet_id": "subnet-0231a3032d787477a"
          },
          "dependencies": [
            "module.kafka_elastic_ip.aws_eip.elastic_ip",
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.route_table.aws_route_table.private_route_table"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e0b51793742e644",
            "route_table_id": "rtb-030ef7313b21d71ac",
            "subnet_id": "subnet-032ad73c90a8632e0"
          },
          "dependencies": [
            "module.kafka_elastic_ip.aws_eip.elastic_ip",
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.route_table.aws_route_table.private_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067144e4a57e85e51",
            "route_table_id": "rtb-04e71078f40c94426",
            "subnet_id": "subnet-0f56fa974f86e5385"
          },
          "dependencies": [
            "module.kafka_internet_gateway.aws_internet_gateway.internet_gateway",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.route_table.aws_route_table.public_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:security-group/sg-02fea13b791edc0e0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fea13b791edc0e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230205112702891600000007",
            "name_prefix": "terraform-",
            "owner_id": "978092202413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:security-group/sg-088d0f673931f259c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088d0f673931f259c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              }
            ],
            "name": "terraform-20230205112702180100000001",
            "name_prefix": "terraform-",
            "owner_id": "978092202413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka_sg-1"
            },
            "tags_all": {
              "Name": "kafka_sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:security-group/sg-0534362c28ee10a05",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0534362c28ee10a05",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.5.0/24"
                ],
                "description": "",
                "from_port": 2182,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2182
              }
            ],
            "name": "terraform-20230205112702186400000002",
            "name_prefix": "terraform-",
            "owner_id": "978092202413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka_sg-2"
            },
            "tags_all": {
              "Name": "kafka_sg-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:security-group/sg-04fa5767b5ddf3267",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fa5767b5ddf3267",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.6.0/24"
                ],
                "description": "",
                "from_port": 2183,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2183
              }
            ],
            "name": "terraform-20230205112702740700000006",
            "name_prefix": "terraform-",
            "owner_id": "978092202413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka_sg-3"
            },
            "tags_all": {
              "Name": "kafka_sg-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zkeeper_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:security-group/sg-0e477ec8ff898ec23",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e477ec8ff898ec23",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "terraform-20230205112702195600000004",
            "name_prefix": "terraform-",
            "owner_id": "978092202413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zkeeper_sg-1"
            },
            "tags_all": {
              "Name": "zkeeper_sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:security-group/sg-07cf6135fc5a0188e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cf6135fc5a0188e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 9093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9093
              }
            ],
            "name": "terraform-20230205112702194800000003",
            "name_prefix": "terraform-",
            "owner_id": "978092202413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zkeeper_sg-2"
            },
            "tags_all": {
              "Name": "zkeeper_sg-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:978092202413:security-group/sg-09ccb3e397a245320",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ccb3e397a245320",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9094
              }
            ],
            "name": "terraform-20230205112702202200000005",
            "name_prefix": "terraform-",
            "owner_id": "978092202413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zkeeper_sg-3"
            },
            "tags_all": {
              "Name": "zkeeper_sg-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-058efee5b65516d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kafka_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1566484129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-088d0f673931f259c",
            "security_group_rule_id": "sgr-0c68c09811eb82939",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.kafka_SG"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-516426905",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0534362c28ee10a05",
            "security_group_rule_id": "sgr-0d24ed51488f2be97",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.kafka_SG"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3665500757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04fa5767b5ddf3267",
            "security_group_rule_id": "sgr-0da309ae556336a68",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.kafka_SG"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3690725899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02fea13b791edc0e0",
            "security_group_rule_id": "sgr-0f58363115234b7d0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.bastion_SG"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zkeeper_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2775558005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e477ec8ff898ec23",
            "security_group_rule_id": "sgr-07230efc1e35e37c6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.zkeeper_SG"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3439930274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07cf6135fc5a0188e",
            "security_group_rule_id": "sgr-07f6378d40d1d3eed",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.zkeeper_SG"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1971209436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ccb3e397a245320",
            "security_group_rule_id": "sgr-0d4f20cfaf0aa6ffa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.zkeeper_SG"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8d9a2de1bcdb066",
            "arn": "arn:aws:ec2:ap-south-2:978092202413:instance/i-0042f044f2e384268",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0042f044f2e384268",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebd07d7e4816e770",
            "private_dns": "ip-10-0-0-207.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.207",
            "public_dns": "ec2-18-60-40-180.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.60.40.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c000c2abd82056b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f56fa974f86e5385",
            "tags": {
              "Name": "bastion_server"
            },
            "tags_all": {
              "Name": "bastion_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02fea13b791edc0e0"
            ]
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.bastion_SG"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8d9a2de1bcdb066",
            "arn": "arn:aws:ec2:ap-south-2:978092202413:instance/i-07abd99d1e2a874d5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07abd99d1e2a874d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c32c1fd7f0a7001",
            "private_dns": "ip-10-0-4-64.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0001abb2f1d517363",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0e3550ea78e9224",
            "tags": {
              "Name": "kafka_server-1"
            },
            "tags_all": {
              "Name": "kafka_server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088d0f673931f259c"
            ]
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.bastion_SG",
            "module.security-groups.aws_security_group.kafka_SG",
            "module.servers.aws_instance.bastion_host"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8d9a2de1bcdb066",
            "arn": "arn:aws:ec2:ap-south-2:978092202413:instance/i-041bf09caab69bff8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041bf09caab69bff8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dedaadc4b01c44c4",
            "private_dns": "ip-10-0-5-77.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0737a3ac95122af9e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0231a3032d787477a",
            "tags": {
              "Name": "kafka_server-2"
            },
            "tags_all": {
              "Name": "kafka_server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0534362c28ee10a05"
            ]
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.bastion_SG",
            "module.security-groups.aws_security_group.kafka_SG",
            "module.servers.aws_instance.bastion_host"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8d9a2de1bcdb066",
            "arn": "arn:aws:ec2:ap-south-2:978092202413:instance/i-0135e8bd28e643a39",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0135e8bd28e643a39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-026ee43d2d96d51f0",
            "private_dns": "ip-10-0-6-97.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0413f68657cc9879b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032ad73c90a8632e0",
            "tags": {
              "Name": "kafka_server-3"
            },
            "tags_all": {
              "Name": "kafka_server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04fa5767b5ddf3267"
            ]
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.bastion_SG",
            "module.security-groups.aws_security_group.kafka_SG",
            "module.servers.aws_instance.bastion_host"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "zkeeper_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8d9a2de1bcdb066",
            "arn": "arn:aws:ec2:ap-south-2:978092202413:instance/i-0530bbba07e31dac7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0530bbba07e31dac7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062b90071a9f4a3fd",
            "private_dns": "ip-10-0-1-163.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d9bd75a9e27f547b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b164816f68b92852",
            "tags": {
              "Name": "zookeeper_server-1"
            },
            "tags_all": {
              "Name": "zookeeper_server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e477ec8ff898ec23"
            ]
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.bastion_SG",
            "module.security-groups.aws_security_group.zkeeper_SG",
            "module.servers.aws_instance.bastion_host"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8d9a2de1bcdb066",
            "arn": "arn:aws:ec2:ap-south-2:978092202413:instance/i-0fb8161f4bf9952cc",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb8161f4bf9952cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f309870047584b46",
            "private_dns": "ip-10-0-2-5.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060b289d678bb5a0f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006a2fb2c4a3d7269",
            "tags": {
              "Name": "zookeeper_server-2"
            },
            "tags_all": {
              "Name": "zookeeper_server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07cf6135fc5a0188e"
            ]
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.bastion_SG",
            "module.security-groups.aws_security_group.zkeeper_SG",
            "module.servers.aws_instance.bastion_host"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8d9a2de1bcdb066",
            "arn": "arn:aws:ec2:ap-south-2:978092202413:instance/i-0e477f754ef4c49d8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e477f754ef4c49d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016dd4551a0205ec5",
            "private_dns": "ip-10-0-3-200.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6c00e0ade227769",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a3a56b4e5273367",
            "tags": {
              "Name": "zookeeper_server-3"
            },
            "tags_all": {
              "Name": "zookeeper_server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09ccb3e397a245320"
            ]
          },
          "dependencies": [
            "module.kafka_subnets.aws_subnet.private_subnets",
            "module.kafka_subnets.aws_subnet.public_subnet",
            "module.kafka_subnets.data.aws_availability_zones.available",
            "module.kafka_vpc.aws_vpc.my_vpc",
            "module.security-groups.aws_security_group.bastion_SG",
            "module.security-groups.aws_security_group.zkeeper_SG",
            "module.servers.aws_instance.bastion_host"
          ]
        }
      ]
    }
  ]
}